--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ a:hover {
   background-repeat: no-repeat;
    z-index: 100;
   background-position: top center left;
-  height:100vh;
+  height:100%;
 }
 
 @media (max-width: 1024px) {
