--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -870,6 +870,27 @@ section {
   padding-bottom: 20px;
 }
 
+.services .card{
+  margin-bottom: 10px;
+  transition: 0.5s ease-in-out;
+}
+
+.services img{
+  transition: 0.5s ease-in-out;
+}
+
+.services .card:hover img {
+  transform: scale(1.1);
+}
+
+.services .card:hover .card-body {
+  border-color: #00071c;
+}
+
+.services .card:hover .card-body .card-title a {
+  color: #00071c;
+}
+
 .services .icon-box {
   padding: 30px;
   position: relative;
@@ -961,6 +982,43 @@ section {
   border-color: #2282ff;
 }
 
+/* Scroll Cards */
+
+.owl-carousel .owl-item .single-staff-item img{
+  max-width: 325px;
+  width: 100%;
+}
+.staff-meta {
+  font-size: 12px;
+  color: #b7b7b7;
+  margin-top: 20px;
+}
+
+.staff-meta h3 {
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+.staff-list .owl-nav button {
+  display: inline-block;
+  width: 50px;
+  height: 40px;
+  background-color: #f3f3f3 !important;
+  margin-left: 10px;
+  transition: .3s;
+}
+.staff-list .owl-nav button:hover{
+  background: #14ADF3 !important;
+  color: white !important;
+}
+.staff-list .owl-nav {
+  position: absolute;
+  right: 0;
+  top: -46px;
+}
+.staff-desc{
+  margin-top: 20px;
+}
+
 /*--------------------------------------------------------------
 # Why Us
 --------------------------------------------------------------*/
@@ -1002,7 +1060,7 @@ section {
   margin-left: 95px;
   font-weight: 700;
   margin-bottom: 10px;
-  font-size: 18px;
+  font-size: 28px;
   text-transform: uppercase;
 }
 
@@ -1018,7 +1076,7 @@ section {
 .why-us .icon-box .description {
   margin-left: 95px;
   line-height: 24px;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .why-us .video-box {
