--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 95vh;
+  height: 100vh;
   overflow: hidden;
   position: relative;
 }
@@ -417,7 +417,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   left: 30%;
   top: 0;
   width: 110%;
-  height: 100vh;
+  height: 110vh;
   background: url("../img/pb.jpeg") center center no-repeat;
   background-size: contain;
   z-index: 0;
@@ -450,7 +450,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   left: 50%;
   top: 0;
   width: 130%;
-  height: 100vh;
+  height: 110vh;
   background: linear-gradient(90deg, #FFf 50%, #00071c 50%);
   opacity: 0.9;
   z-index: 0;  
@@ -485,7 +485,8 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 }
 
 #hero .carousel-control-prev, #hero .carousel-control-next {
-  width: 10%;
+  width: auto;
+  transform: translateX(50px) translateY(-20px);
 }
 
 #hero .carousel-control-next-icon, #hero .carousel-control-prev-icon {
