--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,6 +686,11 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   }
   
 }
+@media(max-width: 540px){
+  #hero img{
+    transform: translateX(150px) translateY(-20px);
+  }
+}
 
 @media(max-width:375px){
   #hero img{
