--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,10 +75,10 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 10px solid gold;
-  border-top: 10px solid red;
-  border-bottom: 10px solid white;
-  border-right: 10px solid black;
+  border: 5px solid white;
+  border-top: 5px solid #00071c;
+  border-bottom: 5px solid white;
+  border-right: 5px solid #00071c;
   border-radius: 50%;
   width: 80px;
   height: 80px;
@@ -590,17 +590,22 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   }  
   
   #hero::after{
-    background: none;        
+    background: rgba(0, 0, 0, 0.452) !important; 
+    width: 200%;       
   }
 
   #hero::before{   
-   background: #00071c !important;
+   background: url("../img/pb.jpeg") no-repeat rgba(0, 0, 0, 0.644) !important;  
+   background-position-x: 35% !important;
+   background-size: cover !important;
   }
   #hero .carousel-container{
     transform: translateX(0px);
   }
   #hero img{
     transform: translateX(360px) translateY(-50px);
+    position: relative;
+    z-index:200 !important;
   }
 
   #hero h2{
@@ -886,6 +891,108 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   #hero-no-slider h2 {
     font-size: 30px;
   }
+}
+
+/*home section*/
+.home{
+  background: url(../img/pb.jpeg) no-repeat center center;
+  background-size: cover;
+}
+.home_skew_border{
+  position: relative;
+}
+.home_skew_border:after{
+  position: absolute;
+  left:0;
+  bottom:0;
+  content: "";
+  width: 0;
+  height: 0;
+  border-bottom: 86px solid #fff;
+  border-right: 680px solid transparent;
+
+}
+.home_skew_border:before{
+  position: absolute;
+  right:0;
+  bottom:0;
+  content: "";
+  width: 0;
+  height: 0;
+  border-bottom: 86px solid #fff;
+  border-left: 680px solid transparent;
+}
+.main_home{
+  padding-top: 250px;
+  padding-bottom: 250px;
+  display: block;
+}
+
+
+.main_home h1{
+  color: #fff;
+  margin-bottom:20px;
+}
+.main_home p{
+  color: #fff;
+  max-width: 60%;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  font-size:1.125rem;
+
+}
+
+.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
+  color: #fff;
+  outline: none;
+  background: #e74c3c;
+}
+.slick-arrow{
+  background: #ddd;
+  color:#000;
+}
+.main_home_slider i{
+  width:40px;
+  height: 40px;
+  line-height: 40px;
+  color:#fff;
+  background: #e74c3c;
+}
+.main_home_slider i.nextprevleft{
+  width:40px;
+  height: 40px;
+  line-height: 40px;
+  color:#000;
+  background: #716a65;
+  float: left;
+  position: absolute;
+  z-index: 999;
+  top: 400px;
+  font-size:1.5rem;
+  transition: all 0.6s;
+  left:-60px;
+}
+.main_home_slider i.nextprevright{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #000;
+  background: #716a65;
+  float: right;
+  position: absolute;
+  z-index: 999;
+  top: 400px;
+  font-size:1.5rem;
+  transition: all 0.6s;
+  right: -50px;
+}
+.main_home_slider i.nextprevleft:hover{
+  color:#fff;
+  background: #e74c3c;
+}
+.main_home_slider i.nextprevright:hover{
+  color: #fff;
+  background: #e74c3c;
 }
 
 /*--------------------------------------------------------------
@@ -2579,7 +2686,7 @@ section {
 #footer {
   background: #000;
   padding: 0 0 30px 0;
-  color: #fff;
+  color: #000;
   font-size: 14px;
 }
 
