--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,6 +401,289 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   display: block;
 }
 
+/*----------------------------------------------------*/
+/* Home Banner Area css
+============================================================================================ */
+.home_banner_area .carousel-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  
+}
+
+.home_banner_area h2 {
+  color: #fff;
+  margin-bottom: 30px;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.home_banner_area p {
+  width: 80%;
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+  margin: 0 auto 30px auto;
+  color: #fff;
+}
+
+.home_banner_area .btn-get-started {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 10px;
+  color: #fff;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  border: 2px solid #fff;
+}
+
+.home_banner_area .btn-get-started:hover {
+  background: #fff;
+  color: #00071c;
+  text-decoration: none;
+}
+
+
+.home_banner_area {
+  position: relative;
+  z-index: 1;
+ background: #00071c;
+   }
+  .home_banner_area .box_1620 {
+    min-height: 400px;
+    border-radius: 12px;
+    position: relative;
+    bottom: -50px;
+    background: #00071c;
+    padding: 30px;
+     }
+  .home_banner_area .banner_inner {
+    position: relative;
+    width: 100%;
+    display: flex; }
+    .home_banner_area .banner_inner .banner_content {
+      color: #222222;
+      vertical-align: middle;
+      align-self: center;
+      text-align: left; }
+      
+      .home_banner_area .banner_inner .banner_content .media .media-body {
+        vertical-align: middle;
+        align-self: center; }
+
+.blog_banner {
+  min-height: 780px;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  margin-bottom: 0px; }
+  .blog_banner .banner_inner {
+    background: #04091e;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    min-height: 780px;
+    z-index: 1; }
+    .blog_banner .banner_inner .overlay {
+      background: url(../img/banner/banner-2.jpg) no-repeat scroll center center;
+      opacity: .5;
+      height: 125%;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      z-index: -1; }
+    .blog_banner .banner_inner .blog_b_text {
+      max-width: 700px;
+      margin: auto;
+      color: #fff; }
+      .blog_banner .banner_inner .blog_b_text h2 {
+        font-size: 60px;
+        font-weight: bold;
+        font-family: "Heebo", sans-serif;
+        line-height: 66px;
+        margin-bottom: 15px;
+        text-transform: uppercase; }
+      .blog_banner .banner_inner .blog_b_text p {
+        font-size: 16px;
+        margin-bottom: 35px; }
+      .blog_banner .banner_inner .blog_b_text .white_bg_btn {
+        line-height: 42px;
+        padding: 0px 45px;
+        border-radius: 5px; }
+
+.banner_box {
+  max-width: 1620px;
+  margin: auto; }
+
+.banner_area {
+  position: relative;
+  z-index: 1;
+  min-height: 350px;
+  background: #00071c;
+   }
+  .banner_area .box_1620 {
+    background: #fff;
+    min-height: 360px;
+    border-radius: 12px;
+    position: relative;
+    bottom: -120px;
+    box-shadow: 0px 20px 80px 0px rgba(153, 153, 153, 0.3); }
+  .banner_area .banner_inner {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    min-height: 360px;
+    z-index: 1; }
+    .banner_area .banner_inner .banner_content h2 {
+      color: #222222;
+      font-size: 48px;
+      font-family: "Heebo", sans-serif;
+      margin-bottom: 0px;
+      font-weight: bold; }
+    .banner_area .banner_inner .banner_content .page_link a {
+      font-size: 14px;
+      color: #222222;
+      font-family: "Roboto", sans-serif;
+      margin-right: 32px;
+      position: relative; }
+      .banner_area .banner_inner .banner_content .page_link a:before {
+        content: "\e87a";
+        font-family: 'Linearicons-Free';
+        position: absolute;
+        right: -25px;
+        top: 50%;
+        transform: translateY(-50%); }
+      .banner_area .banner_inner .banner_content .page_link a:last-child {
+        margin-right: 0px; }
+        .banner_area .banner_inner .banner_content .page_link a:last-child:before {
+          display: none; }
+      .banner_area .banner_inner .banner_content .page_link a:hover {
+        color: #766dff; }
+
+    
+@media (max-width:1199px){
+	/* Main Menu Area css
+	============================================================================================ */
+	.header_area .navbar .nav .nav-item {
+		margin-right: 28px;
+	}
+	/* End Main Menu Area css
+	============================================================================================ */
+	/* Home Banner Area css
+	============================================================================================ */
+	.home_banner_area {
+		min-height: 528px;
+	}
+	.home_banner_area .banner_inner {
+		min-height: 450px;
+	}
+	.header_area .navbar .nav .nav-item.submenu ul {
+		left: auto;
+		right: 0px;
+	}
+	/* End Home Banner Area css
+	============================================================================================ */
+	 
+	.home_banner_area .banner_content{
+		max-width: 500px;
+		margin: auto;
+	}
+	.home_banner_area .banner_inner .banner_content .media .d-flex {
+		padding-right: 0px;
+		display: block;
+		width: 100%;
+	}
+	.home_banner_area .banner_inner .banner_content .media .d-flex img {
+		width: 100%;
+		height: 100%;
+	}
+	.home_banner_area .banner_inner .banner_content .media .media-body {
+		margin-top: 30px;
+	}
+	.home_banner_area .box_1620 {
+		bottom: -50px;
+	}
+	.profile_inner .personal_text {
+		padding-left: 0px;
+	}
+	.home_banner_area.blog_banner .banner_inner{
+		min-height: 728px;
+	}
+	.home_banner_area.blog_banner {
+		margin-bottom: 0px;
+	}
+}
+
+@media (max-width:991px){
+	.home_banner_area .donation_inner{
+		margin-bottom: -30px;
+	}
+	.home_banner_area .dontation_item{
+		max-width: 350px;
+		margin: auto;
+	}
+
+}
+@media (max-width:767px){
+	.home_banner_area {
+		min-height: 570px;
+		margin-bottom: 120px;
+	}
+	.home_banner_area .banner_inner {
+		min-height: 500px;
+	}
+	.home_banner_area .box_1620 {
+		min-height: 500px;
+	}
+	.home_banner_area .banner_inner .banner_content {
+		margin-top: 0px;
+	}
+	.home_banner_area .banner_inner .banner_content h3 {
+		font-size: 45px;
+		line-height: 55px;
+	}
+	.home_banner_area .banner_inner .banner_content p br {
+		display: none;
+	}
+	.home_banner_area .banner_inner .banner_content h3 span {
+		line-height: 45px;
+		padding-bottom: 0px;
+		padding-top: 0px;
+	}
+
+}
+
+
+@media (max-width:480px){
+	
+	/* Home Banner Area css
+	============================================================================================ */
+    .home_banner_area .banner_inner .banner_content {
+		padding: 30px 15px;
+		margin-top: 0px;
+	}
+	.banner_content .white_btn {
+		display: block;
+	}
+	/* End Home Banner Area css
+	============================================================================================ */
+	.banner_area .banner_inner .banner_content h2 {
+		font-size: 32px;
+	}
+
+}
+
+/* End Home Banner Area css
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
