--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2969,8 +2969,12 @@ section {
 #footer {
   background: #000;
   padding: 0 0 30px 0;
-  color: #000;
+  color: #fff;
   font-size: 14px;
+}
+
+.footer2{
+   color: #000!important;
 }
 
 #footer .footer-newsletter {
