--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   src: URL("../fonts/montserrat/Montserrat-Medium.otf") format("opentype");
 }
 html {
-  background-color: #00071c;
+  background-color: #fff;
 }
 body {
   font-family: "montserrat-semibold";
@@ -432,7 +432,7 @@ h6,
 }
 
 .home_banner_area h2 {
-  color: #fff;
+  color: #00071c;
   margin-bottom: 30px;
   font-size: 2rem;
   font-weight: 700;
@@ -443,7 +443,7 @@ h6,
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
   margin: 0 auto 30px auto;
-  color: #fff;
+  color: #00071c;
 }
 
 .home_banner_area .btn-get-started {
@@ -458,28 +458,31 @@ h6,
   line-height: 1;
   margin: 10px;
   color: #fff;
+  background: #00071c;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   border: 2px solid #fff;
 }
 
 .home_banner_area .btn-get-started:hover {
-  background: #fff;
-  color: #00071c;
+  background: #00071c;
+  color: #fff;
   text-decoration: none;
+  border: 2px solid #fff;
+  font-size: 18px;
 }
 
 .home_banner_area {
   position: relative;
   z-index: 1;
-  background: #00071c;
+  background: #fff;
 }
 .home_banner_area .box_1620 {
   min-height: 400px;
   border-radius: 12px;
   position: relative;
   bottom: -50px;
-  background: #00071c;
+  background: #fff;
   padding: 30px;
 }
 .home_banner_area .banner_inner {
@@ -737,13 +740,20 @@ h6,
   transform: translateX(-62%);
 }
 
+.carousel-control-next,
+.carousel-control-prev {
+  width: 0 !important;
+  font-size: 3rem !important;
+  color: #00071c !important;
+}
+
 @media (max-width: 748px) {
   #hero::after {
     background: none;
   }
   #hero .carousel-control-prev,
   #hero .carousel-control-next {
-    color: #fff !important;
+    color: #00071c !important;
   }
   #header {
     background: #00071c !important;
@@ -939,7 +949,7 @@ h6,
 
 @media (max-width: 768px) {
   #hero::before {
-    background: #00071c;
+    background: #fff;
   }
   #hero::after {
     background: none;
@@ -972,7 +982,7 @@ h6,
 
 @media (max-width: 575px) {
   #hero::before {
-    background: #00071c;
+    background: #fff;
   }
   #hero .carousel-container {
     transform: translateX(0px);
@@ -1322,8 +1332,12 @@ section {
   padding: 40px 0;
 }
 
+section p {
+  color: #838383 !important;
+}
+
 .section-bg {
-  background-color: #00071c;
+  background-color: #fff;
 }
 
 .section-title {
@@ -1739,12 +1753,12 @@ section {
 # Features
 --------------------------------------------------------------*/
 .features .row + .row {
-  margin-top: 100px;
+  margin-top: 25px;
 }
 
 .features .row {
-  box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
-  background: rgb(236, 236, 236);
+  box-shadow: 0 5px 25px 0 #fff;
+  background: #fff;
   padding: 10px;
   border-radius: 10px;
 }
