--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,6 +745,7 @@ h6,
   width: 0 !important;
   font-size: 3rem !important;
   color: #00071c !important;
+  transform: translateY(150px);
 }
 
 @media (max-width: 748px) {
